; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_diff/extr_deprecated.c_datasource_close.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_diff/extr_deprecated.c_datasource_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fns_wrapper_baton = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32* (i32, i32)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*, i32)* @datasource_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @datasource_close(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.fns_wrapper_baton*, align 8
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.fns_wrapper_baton*
  store %struct.fns_wrapper_baton* %7, %struct.fns_wrapper_baton** %5, align 8
  %8 = load %struct.fns_wrapper_baton*, %struct.fns_wrapper_baton** %5, align 8
  %9 = getelementptr inbounds %struct.fns_wrapper_baton, %struct.fns_wrapper_baton* %8, i32 0, i32 1
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32* (i32, i32)*, i32* (i32, i32)** %11, align 8
  %13 = load %struct.fns_wrapper_baton*, %struct.fns_wrapper_baton** %5, align 8
  %14 = getelementptr inbounds %struct.fns_wrapper_baton, %struct.fns_wrapper_baton* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 8
  %16 = load i32, i32* %4, align 4
  %17 = call i32* %12(i32 %15, i32 %16)
  ret i32* %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
